Fix CORS allowed origins and OPTIONS requests